--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="img/logo.png" />
+    <link rel="icon" href="img/logo.png" />
     <title>Piotr Rutkowski</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -28,7 +30,7 @@
                 </button>
             </p>
             <p>
-            <h1>Piotr  Rutkowski</h1>
+            <h1>Piotr Rutkowski</h1>
         </header>
 
         <img src="https://i.postimg.cc/vBKgrDT7/myself-2-2023.jpg" alt="Piotr Rutkowski" class="myselfImage">
